--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,34 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+</head>
+<body>
+	<div id="refresh">
+		<img title="Оновити" src="refresh.png">
+	</div>
+
+	Продаж: <span id="course_sale"></span><br>
+	Покупка: <span id="course_buy"></span>
+
+	<p>
+		Гривня:
+		<input placeholder="₴ 0.00" type="text" id="uah">
+	</p>
+
+	<p>
+		Долар США:
+		<input placeholder="$ 0.00" type="text" id="usd">
+	</p>
+	
+	Останнє оновлення курсу: <span id="course_time"></span>
+
+	<script type="text/javascript" src="popup.js"></script>
 	<style type="text/css">
 		body {
 			font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-			background: #fafafa;
+			background: url("funky-lines.png") #fafafa;
 			color: #515151;
-			height: 180px;
-			overflow: hidden;
 		}
 		input[type="text"] {
 			padding: 5px;
@@ -17,33 +38,10 @@
 			margin: .2em;
 			cursor: pointer;
 		}
+		#course_time {
+			float: right;
+			margin: .9em 0;
+		}
 	</style>
-</head>
-<body>
-	<p>
-		<div id="refresh">
-			<img title="Обновить" src="https://image.flaticon.com/icons/png/24/359/359411.png">
-		</div>
-		Продажа: <span id="course_sale"></span><br>
-		Покупка: <span id="course_buy"></span>
-	</p>
-
-
-	<p>
-		Доллар:
-		<input placeholder="$ доллар" type="text" id="usd">
-	</p>
-
-	<p>
-		Гривна:
-		<input placeholder="₴ гривна" type="text" id="uah">
-	</p>
-
-	<p>
-		Последнее обновление курса:
-		<span id="course_time"></span>
-	</p>
-
-	<script type="text/javascript" src="popup.js"></script>
 </body>
 </html>
